--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/building_card.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-
     <!--To load jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
+    <!--To dataTables -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
 
 
     <title>Document</title>
@@ -59,12 +61,15 @@
             <div class='simplex_box'>
                 <!-- simplex -->
                 <p> simplex box </p>
+                                    <!--
+
                 <wix-iframe data-src="">
                     <div class="_16FUt"><iframe class="_3S5H9" title="htmlComp-iframe" name="htmlComp-iframe" data-src="" src="https://simplex-smart3d.com/ces/TLV/app-WEBINAR/?pos=34.7671875,32.0708125,810&amp;ori=0,-90,0#layers=[{&quot;name&quot;:&quot;model1&quot;,&quot;show&quot;:true}]&amp;lookAt={&quot;lat&quot;:32.0708125,&quot;lon&quot;:34.7671875,&quot;elev&quot;:1,&quot;pitch&quot;:25,&quot;dist&quot;:100,&quot;circle&quot;:true,&quot;rpm&quot;:0.5,&quot;duration&quot;:3,&quot;fly&quot;:true}&amp;layout=clean&amp;camera={&quot;move&quot;:false,&quot;rotate&quot;:true,&quot;zoom&quot;:true}"
                             width="100%" height="100%">
                         </iframe>
                     </div>
                 </wix-iframe>
+                                        -->
             </div>
             <div class='graph_box'>
                 <!-- Graph -->
@@ -76,8 +81,24 @@
         <div class="bottom_container">
             <!-- table -->
             <div class='table_box'>
-                <p> table </p>
-
+                <table id="table_id" class="display">
+                    <thead>
+                        <tr>
+                            <th>Column 1</th>
+                            <th>Column 2</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Row 1 Data 1</td>
+                            <td>Row 1 Data 2</td>
+                        </tr>
+                        <tr>
+                            <td>Row 2 Data 1</td>
+                            <td>Row 2 Data 2</td>
+                        </tr>
+                    </tbody>
+                </table>
                 <!-- table -->
             </div>
             <!-- close: class="bottom_container"-->
