end of day WIP - building_card passing array not working - get array error

--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -12,6 +12,9 @@
     <!--To dataTables -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+    <!--To pass variables -->
+    <script type="text/javascript" src="../js/app.js"></script>
+
 
 
     <title>Document</title>
@@ -61,7 +64,7 @@
             <div class='simplex_box'>
                 <!-- simplex -->
                 <p> simplex box </p>
-                                    <!--
+                <!--
 
                 <wix-iframe data-src="">
                     <div class="_16FUt"><iframe class="_3S5H9" title="htmlComp-iframe" name="htmlComp-iframe" data-src="" src="https://simplex-smart3d.com/ces/TLV/app-WEBINAR/?pos=34.7671875,32.0708125,810&amp;ori=0,-90,0#layers=[{&quot;name&quot;:&quot;model1&quot;,&quot;show&quot;:true}]&amp;lookAt={&quot;lat&quot;:32.0708125,&quot;lon&quot;:34.7671875,&quot;elev&quot;:1,&quot;pitch&quot;:25,&quot;dist&quot;:100,&quot;circle&quot;:true,&quot;rpm&quot;:0.5,&quot;duration&quot;:3,&quot;fly&quot;:true}&amp;layout=clean&amp;camera={&quot;move&quot;:false,&quot;rotate&quot;:true,&quot;zoom&quot;:true}"
@@ -81,6 +84,8 @@
         <div class="bottom_container">
             <!-- table -->
             <div class='table_box'>
+
+
                 <table id="table_id" class="display">
                     <thead>
                         <tr>
