--- a/output.html
+++ b/output.html
@@ -32,11 +32,12 @@
     <!-- load isotope's cells by colomn -->
     <script src="node_modules/isotope-fit-columns/fit-columns.js">
     </script>
-    <!-- load swup -->
+    <!-- load swup
     <script defer="" src="node_modules/swup/dist/swup.min.js">
     </script>
-    <script defer="" src="./js/app.js">
-    </script>
+     -->
+    <!--To pass variables -->
+    <script type="text/javascript" src="../js/app.js"></script>
     <link href="./css/trans.css" rel="stylesheet" />
     <!-- load leaflet for map-->
     <link crossorigin="" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" rel="stylesheet" />
