--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -32,6 +32,7 @@
             <p>complex: north jaffa</p>
             <p>status: conservation b</p>
             <p>City Building Plan: 2572</p>
+            <p id="building_id">ID: 12146</p>
         </div>
         <div class="carousel-container">
             <img alt="test" photo_num='1' class="center carousel" src="../photos/אאורבך-4(2)_12146.jpg">
@@ -62,14 +63,14 @@
         <div class="top_container">
             <!-- simplex / powerBI -->
             <div class='simplex_box'>
-                <!-- simplex -->
+                <!-- simplex 
                 <wix-iframe data-src="">
                     <div class="_16FUt"><iframe class="_3S5H9" title="htmlComp-iframe" name="htmlComp-iframe" data-src="" src="https://simplex-smart3d.com/ces/TLV/app-WEBINAR/?pos=34.7671875,32.0708125,810&amp;ori=0,-90,0#layers=[{&quot;name&quot;:&quot;model1&quot;,&quot;show&quot;:true}]&amp;lookAt={&quot;lat&quot;:32.0708125,&quot;lon&quot;:34.7671875,&quot;elev&quot;:1,&quot;pitch&quot;:25,&quot;dist&quot;:100,&quot;circle&quot;:true,&quot;rpm&quot;:0.5,&quot;duration&quot;:3,&quot;fly&quot;:true}&amp;layout=clean&amp;camera={&quot;move&quot;:false,&quot;rotate&quot;:true,&quot;zoom&quot;:true}"
                             width="100%" height="100%">
                         </iframe>
                     </div>
                 </wix-iframe>
-
+-->
             </div>
             <div class='graph_box'>
                 <!-- Graph -->
