--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -14,6 +14,8 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
     <!--To pass variables -->
     <script type="text/javascript" src="../js/app.js"></script>
+    <!--To load chartjs -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
 
 
 
@@ -74,7 +76,7 @@
             </div>
             <div class='graph_box'>
                 <!-- Graph -->
-                <p> graph </p>
+                <canvas id="radar_chart"></canvas>
             </div>
         </div>
         <!-- close: class="top_container"-->
@@ -108,8 +110,11 @@
 </body>
 
 <footer>
+
     <!--To load javascript page -->
     <script src="../js/building_card.js"></script>
+
+
 </footer>
 
 </html>
