hovering on map dots enlarges images - doesn't work after filter. why?

--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -72,11 +72,13 @@
                         </iframe>
                     </div>
                 </wix-iframe>
--->
+                -->
+
             </div>
             <div class='graph_box'>
                 <!-- Graph -->
                 <canvas id="radar_chart"></canvas>
+                <canvas id="multi_series_pie_chart"></canvas>
             </div>
         </div>
         <!-- close: class="top_container"-->
@@ -91,8 +93,15 @@
                         <tr>
                             <th>id</th>
                             <th>primary</th>
-                            <th>lat</th>
+                            <th>secondary</th>
                             <th>n_bicycle_parking.</th>
+                            <th>placeholder.</th>
+                            <th>placeholder.</th>
+                            <th>placeholder.</th>
+                            <th>placeholder.</th>
+                            <th>placeholder.</th>
+                            <th>placeholder.</th>
+
 
                         </tr>
                     </thead>
