--- a/output.html
+++ b/output.html
@@ -20,6 +20,8 @@
     </script>
     <!-- style menu -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+
     <!--To load Jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js ">
     </script>
@@ -95,10 +97,14 @@
     <header class="clearfix">
         <!-- KEEP HEADER BETWEEN PAGES -->
         <button id="vis_grid">
-    grid
+            <span class="material-icons-outlined">
+                grid_view
+                </span>
    </button>
         <button id="vis_map">
-    map
+            <span class="material-icons-outlined">
+                map
+                </span>
    </button>
         <!--
 
@@ -127,8 +133,10 @@
             <ul>
                 <li>
                     <a href="#">
-       Filter
-      </a>
+                        <span class="material-icons-outlined" button_num='1'>
+                            filter_list
+                            </span>
+                    </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner">
                             <div>
@@ -293,8 +301,10 @@
                 </li>
                 <li>
                     <a href="#">
-       Order
-      </a>
+                        <span class="material-icons-outlined">
+                            sync_alt
+                            </span>
+                    </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner">
                             <div>
