wip building card radar graph. need to nrmalize the values to disply in the graph

--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -78,7 +78,7 @@
             <div class='graph_box'>
                 <!-- Graph -->
                 <canvas id="radar_chart"></canvas>
-                <canvas id="multi_series_pie_chart"></canvas>
+                <!--  <canvas id="multi_series_pie_chart"></canvas> -->
             </div>
         </div>
         <!-- close: class="top_container"-->
