wip simplex api

--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -63,9 +63,10 @@
     <div class='detailed-page'>
         <!-- Entire page-->
         <div class="top_container">
-            <!-- simplex / powerBI - simplex height="550px" width="100%"-->
+            <!-- simplex / powerBI - simplex height="550px" width="100%"            -->
+
             <div class='simplex_box'>
-                <iframe id="inlineFrameExample" title="Meimad Iframe" src="https://simplex-smart3d.com/ces/net/app/index.html#">
+                <iframe id="inlineFrameExample" height="550px" width="100%" title="Meimad Iframe" src="https://simplex-smart3d.com/ces/net/app/index.html#"></iframe>
             </div>
             <div class='graph_box'>
                 <!-- Graph -->
