--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -66,9 +66,9 @@
             <!-- simplex / powerBI - simplex height="550px" width="100%"            -->
 
             <div class='simplex_box'>
-                <iframe id="inlineFrameExample" height="550px" width="100%" title="Meimad Iframe" src="https://simplex-smart3d.com/ces/net/app/index.html#"></iframe>
+                <iframe id="inlineFrameExample" height="550px" width="100%" title="Meimad Iframe" src='https://simplex-smart3d.com/ces/TLV/app-ANPLUS/#lookAt={"lat":32.0438991,"lon":34.7639062, "elev":1,"heading":180,"pitch":45,"dist":300,"duration":3,"fly":true,"showPin": true, "circle":true,"rpm":1 }&layout=clean></iframe>
             </div>
-            <div class='graph_box'>
+            <div class=' graph_box '>
                 <!-- Graph -->
                 <canvas id="radar_chart"></canvas>
                 <!--  <canvas id="multi_series_pie_chart"></canvas> -->
@@ -78,7 +78,7 @@
 
         <div class="bottom_container">
             <!-- table -->
-            <div class='table_box'>
+            <div class='table_box '>
 
 
                 <table id="table_id" class="display">
@@ -108,7 +108,7 @@
         <span class="material-icons-outlined info-button info-detailed" id="buttonLeftFixed">info</span>
 
     </div>
-    <!-- close: class='detailed-page'-->
+    <!-- close: class='detailed-page '-->
 </body>
 
 <footer>
