--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -66,7 +66,7 @@
             <!-- simplex / powerBI - simplex height="550px" width="100%"            -->
 
             <div class='simplex_box'>
-                <iframe id="inlineFrameExample" height="550px" width="100%" title="Meimad Iframe" src='https://simplex-smart3d.com/ces/TLV/app-ANPLUS/#lookAt={"lat":32.0438991,"lon":34.7639062, "elev":1,"heading":180,"pitch":45,"dist":300,"duration":3,"fly":true,"showPin": true, "circle":true,"rpm":1 }&layout=clean></iframe>
+                <iframe id="simplexinlineFrame" height="95%" width="90%" title="Meimad Iframe" src='https://simplex-smart3d.com/ces/TLV/app-ANPLUS/?pos=34.756111,32.055,1100&ori=0,-90,0#lookAt={%22lat%22:32.0438991,%22lon%22:34.7639062,%20%22elev%22:0.1,%22heading%22:180,%22pitch%22:45,%22dist%22:100,%22duration%22:3,%22fly%22:true,%22showPin%22:%20false,%22circle%22:true,%22rpm%22:1}&layout=clean'> </iframe>
             </div>
             <div class=' graph_box '>
                 <!-- Graph -->
