--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </script>
     <!-- style menu -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+
     <!--To load Jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js ">
     </script>
@@ -32,19 +34,19 @@
     <!-- load isotope's cells by colomn -->
     <script src="node_modules/isotope-fit-columns/fit-columns.js">
     </script>
-    <!-- load swup -->
+    <!-- load swup
     <script defer="" src="node_modules/swup/dist/swup.min.js">
     </script>
-    <script defer="" src="./js/app.js">
-    </script>
+     -->
+    <!--To pass variables -->
+    <script type="text/javascript" src="../js/app.js"></script>
     <link href="./css/trans.css" rel="stylesheet" />
     <!-- load leaflet for map-->
     <link crossorigin="" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" rel="stylesheet" />
-    <link href="./css/mapall.css" rel="stylesheet">
+    <link href="./css/mapall.css" rel="stylesheet" />
     <!-- Make sure you put this AFTER Leaflet 's CSS -->
     <script crossorigin="" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js">
     </script>
-    </link>
 </head>
 <!-- for sticky option on scroll-->
 <div class="fixedscroll" id="nav_sticky">
@@ -95,10 +97,14 @@
     <header class="clearfix">
         <!-- KEEP HEADER BETWEEN PAGES -->
         <button id="vis_grid">
-    grid
+            <span class="material-icons-outlined">
+                grid_view
+                </span>
    </button>
         <button id="vis_map">
-    map
+            <span class="material-icons-outlined">
+                map
+                </span>
    </button>
         <!--
 
@@ -127,8 +133,10 @@
             <ul>
                 <li>
                     <a href="#">
-       Filter
-      </a>
+                        <span class="material-icons-outlined" button_num='1'>
+                            filter_list
+                            </span>
+                    </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner">
                             <div>
@@ -293,8 +301,10 @@
                 </li>
                 <li>
                     <a href="#">
-       Order
-      </a>
+                        <span class="material-icons-outlined">
+                            sync_alt
+                            </span>
+                    </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner">
                             <div>
@@ -393,7 +403,6 @@
         <!-- THIS WILL BE REPLACED WITH INSERTED-->
     </div>
     <!-- End of grid items-->
-
     <!--To load javascript for map-->
     <script src="./js/mapall.js ">
     </script>
