--- a/building_cards/12963.html
+++ b/building_cards/12963.html
@@ -25,9 +25,9 @@
             close
             </span>
         <div class="summary">
-            <h2>Derech Jaffa 50</h2>
-            <p>parcel : 21</p>
-            <p>section: 8983.0</p>
+            <h2>Kfar Giladi 20</h2>
+            <p>parcel : 35</p>
+            <p>section: 6930.0</p>
             <p>complex: Florentine</p>
             <p>status: urban fabric preservation b</p>
             <p>City Building Plan: conservation commission</p>
@@ -35,7 +35,7 @@
         </div>
         
         <div class="carousel-container">
-        <img alt="Derech Jaffa 50" photo_num='1' class="center carousel" src="../photos/יפו-50-נחלת-בנימין-74_12963.jpg"><img alt="Derech Jaffa 50" photo_num='2' class="center carousel" src="../photos/כפר-גלעדי-20_12963.jpg"> </div>  <div class="carousel-button">
+        <img alt="Kfar Giladi 20" photo_num='1' class="center carousel" src="../photos/יפו-50-נחלת-בנימין-74_12963.jpg"><img alt="Kfar Giladi 20" photo_num='2' class="center carousel" src="../photos/כפר-גלעדי-20_12963.jpg"> </div>  <div class="carousel-button">
     <span class="material-icons-outlined" button_num='1'>radio_button_checked</span><span class="material-icons-outlined" button_num='1'>radio_button_unchecked</span>
         </div>
         <span class="material-icons-outlined info-button info-summary" id="buttonLeftFixed">info</span>
@@ -54,7 +54,7 @@
 
             <div class='simplex_box'>
                 <iframe id="simplexinlineFrame" height="95%" width="90%" title="Meimad Iframe" 
-                src='https://simplex-smart3d.com/ces/TLV/app-ANPLUS/?pos=34.756111,32.055,1100&ori=0,-90,0#lookAt={%22lat%22:32.0592255,%22lon%22:34.7702192,%20%22elev%22:0.1,%22heading%22:180,%22pitch%22:45,%22dist%22:100,%22duration%22:3,%22fly%22:true,%22showPin%22:%20false,%22circle%22:true,%22rpm%22:1}&layout=clean'> </iframe>
+                src='https://simplex-smart3d.com/ces/TLV/app-ANPLUS/?pos=34.756111,32.055,1100&ori=0,-90,0#lookAt={%22lat%22:32.049357,%22lon%22:34.758355,%20%22elev%22:0.1,%22heading%22:180,%22pitch%22:45,%22dist%22:100,%22duration%22:3,%22fly%22:true,%22showPin%22:%20false,%22circle%22:true,%22rpm%22:1}&layout=clean'> </iframe>
             </div>
             <div class=' graph_box '>
                 <!-- Graph -->
