removed scorlling buttons

--- a/output.html
+++ b/output.html
@@ -50,83 +50,20 @@
 </head>
 <!-- for sticky option on scroll-->
 <div class="fixedscroll" id="nav_sticky">
-    <!-- content that will not change  -->
-    <!-- Navigation menu-->
-    <input class="main-navigation-toggle" id="page-nav-toggle" type="checkbox" />
-    <label for="page-nav-toggle">
-   <svg class="icon--menu-toggle" viewbox="0 0 60 30">
-    <g class="icon-group">
-     <g class="icon--menu">
-      <path d="M 6 0 L 54 0">
-      </path>
-      <path d="M 6 15 L 54 15">
-      </path>
-      <path d="M 6 30 L 54 30">
-      </path>
-     </g>
-     <g class="icon--close">
-      <path d="M 15 0 L 45 30">
-      </path>
-      <path d="M 15 30 L 45 0">
-      </path>
-     </g>
-    </g>
-   </svg>
-  </label>
-    <nav class="main-navigation">
-        <ul>
-            <li>
-                <a href="./output.html">
-      Machine
-     </a>
-            </li>
-            <li>
-                <a href="#0">
-      Data stories
-     </a>
-            </li>
-            <li>
-                <a href="./about.html">
-      About
-     </a>
-            </li>
-        </ul>
-    </nav>
-    <!-- End burger navigation menu-->
-    <!-- content that will be changed when navigating -->
-    <header class="clearfix">
-        <!-- KEEP HEADER BETWEEN PAGES -->
-        <button id="vis_grid">
-    <span class="material-icons-outlined">
+    <!-- scrolling to buildings and back on click
+
+    <a href="#" id="vis_grid">
+        <span class="material-icons-outlined">
      grid_view
     </span>
-   </button>
-        <button id="vis_map">
-    <span class="material-icons-outlined">
+    </a>
+    <a href="#" id="vis_map">
+        <span class="material-icons-outlined">
      map
     </span>
-   </button>
-        <!--
+    </a>
+    -->
 
-        <span>
-     Jaffa
-    </span>
-        <h1>
-            Machine
-        </h1>
-
-        -->
-        <!--
-        <nav>
-            <a class="icon-arrow-left" data-info="previous Blueprint" href="http://tympanus.net/Blueprints/FullWidthImageSlider/">
-      Previous Blueprint
-     </a>
-            <a class="icon-drop" data-info="back to the Codrops article" href="http://tympanus.net/codrops/?p=14426">
-      back to the Codrops article
-     </a>
-        </nav>
-        -->
-    </header>
     <!-- FILTER / SORT DROP MENUS-->
     <div class="main">
         <nav class="cbp-hrmenu" id="cbp-hrmenu">
