--- a/output.html
+++ b/output.html
@@ -49,6 +49,7 @@
     </link>
 </head>
 <!-- for sticky option on scroll-->
+
 <div class="fixedscroll" id="nav_sticky">
     <!-- scrolling to buildings and back on click
 
@@ -38160,6 +38161,18 @@
     </script>
     <!-- load js file with the button controls etc.-->
     <script src="./js/multifilter.js ">
+    </script>
+
+    <div>
+        <span href=# class="material-icons-outlined info-button" id="topLeftFixed">info</span>
+    </div>
+    <script>
+        var map_zoom_control = $('.leaflet-control-zoom-in')
+
+        console.log('zoom control left offset: ', $(map_zoom_control).offset().left);
+        console.log('zoom control size: ', $(map_zoom_control).width());
+
+        $('#topLeftFixed').css("left", $(map_zoom_control).offset().left + ($(map_zoom_control).width() / 4)); // notice pushing qurter of the button size (30px)
     </script>
 </body>
 <!-- close body-->
