before recreating output from python

--- a/output.html
+++ b/output.html
@@ -69,6 +69,7 @@
     <div class="main">
         <nav class="cbp-hrmenu" id="cbp-hrmenu">
             <ul>
+                <!-- holding outide buttons-->
                 <li>
                     <a href="#">
                         <span button_num="1" class="material-icons-outlined">
@@ -252,24 +253,22 @@
                                 </h4>
                                 <ul>
                                     <div class="button-group" id="sorts">
-                                        <button class="button is-checked" data-sort-by="original-order">
-            original order
-           </button>
-                                        <button class="button" data-sort-by="id">
-            id
-           </button>
-                                        <button class="button" data-sort-by="n_bicycle_parking">
-            n_bicycle_parking
-           </button>
-                                        <button class="button" data-sort-by="n_parks">
-            n_parks
-           </button>
-                                        <button class="button" data-sort-by="weight">
-            weight
-           </button>
-                                        <button class="button" data-sort-by="category">
-            category
-           </button>
+                                        <button class="button is-checked" data-sort-by="original-order">original order</button>
+
+                                        <button class="button" data-sort-by="built_density">built density</button>
+
+                                        <button class="button" data-sort-by="centrality">centrality</button>
+
+                                        <button class="button" data-sort-by="dist_parcel_limit">dist_parcel_limit</button>
+
+                                        <button class="button" data-sort-by="bld_vol">bld_vol</button>
+
+                                        <button class="button" data-sort-by="n_historical_bld">n_historical_bld</button>
+                                        <button class="button" data-sort-by="dist_sea">dist_sea</button>
+                                        <button class="button" data-sort-by="arrnona_year">arrnona_year</button>
+                                        <button class="button" data-sort-by="radiation">radiation</button>
+
+
                                     </div>
                                 </ul>
                             </div>
