--- a/output.html
+++ b/output.html
@@ -298,9 +298,34 @@
                                         <button class="button" data-group-by="secondary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="secondary">
             secondary
            </button>
-                                        <button checked="checked" class="button" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
-            fitcolumns
+                                        <button class="button" data-group-by="complex" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="complex">
+            complex
            </button>
+                                        <button class="button" data-group-by="technology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="technology">
+            technology
+           </button>
+                                        <button class="button" data-group-by="status" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="status">
+            status
+           </button>
+                                        <button class="button" data-group-by="finishing_materials" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="finishing_materials">
+            finishing_materials
+           </button>
+                                        <button class="button" data-group-by="roof" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="roof">
+            roof
+           </button>
+                                        <button class="button" data-group-by="typology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="typology">
+            typology
+           </button>
+                                        <button class="button" data-group-by="positioning" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="positioning">
+            positioning
+           </button>
+                                        <button class="button" data-group-by="physical_condition" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="physical_condition">
+            physical_condition
+           </button>
+                                        <button class="button" data-group-by="general_evaluation" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="general_evaluation">
+            general_evaluation
+           </button>
+
                                     </div>
                                     <!-- close  class="button-group layout-mode-button-group" id="group-sort" -->
                                 </ul>
