--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!--To pass variables -->
     <script src="../js/app.js" type="text/javascript">
     </script>
-    <link href="./css/trans.css" rel="stylesheet">
+    <link href="./css/trans.css" rel="stylesheet" />
     <!-- load leaflet for map-->
-    <link crossorigin="" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" rel="stylesheet" />
+    <link crossorigin="" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" rel="stylesheet">
     <link href="./css/mapall.css" rel="stylesheet" />
     <!-- Make sure you put this AFTER Leaflet 's CSS -->
     <script crossorigin="" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js">
@@ -49,7 +49,6 @@
     </link>
 </head>
 <!-- for sticky option on scroll-->
-
 <div class="fixedscroll" id="nav_sticky">
     <!-- scrolling to buildings and back on click
 
@@ -64,7 +63,6 @@
     </span>
     </a>
     -->
-
     <!-- FILTER / SORT DROP MENUS-->
     <div class="main">
         <nav class="cbp-hrmenu" id="cbp-hrmenu">
@@ -253,16 +251,33 @@
                                 </h4>
                                 <ul>
                                     <div class="button-group" id="sorts">
-                                        <button class="button is-checked" data-sort-by="original-order">original order</button>
-                                        <button class="button" data-sort-by="built_density">built density</button>
-                                        <button class="button" data-sort-by="centrality">centrality</button>
-                                        <button class="button" data-sort-by="dist_parcel_limit">dist_parcel_limit</button>
-                                        <button class="button" data-sort-by="bld_vol">bld_vol</button>
-                                        <button class="button" data-sort-by="n_historical_bld">n_historical_bld</button>
-                                        <button class="button" data-sort-by="dist_sea">dist_sea</button>
-                                        <button class="button" data-sort-by="arrnona_year">arrnona_year</button>
-                                        <button class="button" data-sort-by="radiation">radiation</button>
-
+                                        <button class="button is-checked" data-sort-by="original-order">
+            original order
+           </button>
+                                        <button class="button" data-sort-by="built_density">
+            built density
+           </button>
+                                        <button class="button" data-sort-by="centrality">
+            centrality
+           </button>
+                                        <button class="button" data-sort-by="dist_parcel_limit">
+            dist_parcel_limit
+           </button>
+                                        <button class="button" data-sort-by="bld_vol">
+            bld_vol
+           </button>
+                                        <button class="button" data-sort-by="n_historical_bld">
+            n_historical_bld
+           </button>
+                                        <button class="button" data-sort-by="dist_sea">
+            dist_sea
+           </button>
+                                        <button class="button" data-sort-by="arrnona_year">
+            arrnona_year
+           </button>
+                                        <button class="button" data-sort-by="radiation">
+            radiation
+           </button>
                                     </div>
                                 </ul>
                             </div>
@@ -275,17 +290,42 @@
                                 <ul>
                                     <div class="button-group layout-mode-button-group" id="group-sort">
                                         <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
-                                            original order
-                                        </button>
+            original order
+           </button>
                                         <button class="button" data-group-by="primary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="primary">
-                                            primary
-                                        </button>
+            primary
+           </button>
                                         <button class="button" data-group-by="secondary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="secondary">
-                                            secondary
-                                        </button>
-                                        <button checked="checked" class="button" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
-                                            fitcolumns
-                                        </button>
+            secondary
+           </button>
+                                        <button class="button" data-group-by="complex" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="complex">
+            complex
+           </button>
+                                        <button class="button" data-group-by="technology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="technology">
+            technology
+           </button>
+                                        <button class="button" data-group-by="status" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="status">
+            status
+           </button>
+                                        <button class="button" data-group-by="finishing_materials" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="finishing_materials">
+            finishing_materials
+           </button>
+                                        <button class="button" data-group-by="roof" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="roof">
+            roof
+           </button>
+                                        <button class="button" data-group-by="typology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="typology">
+            typology
+           </button>
+                                        <button class="button" data-group-by="positioning" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="positioning">
+            positioning
+           </button>
+                                        <button class="button" data-group-by="physical_condition" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="physical_condition">
+            physical_condition
+           </button>
+                                        <button class="button" data-group-by="general_evaluation" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="general_evaluation">
+            general_evaluation
+           </button>
+
                                     </div>
                                     <!-- close  class="button-group layout-mode-button-group" id="group-sort" -->
                                 </ul>
@@ -295,7 +335,6 @@
                         <!-- /cbp-hrsub-inner -->
                     </div>
                     <!-- /cbp-hrsub -->
-
                 </li>
             </ul>
         </nav>
@@ -364,9 +403,10 @@
     <!-- load js file with the button controls etc.-->
     <script src="./js/multifilter.js ">
     </script>
-
     <div>
-        <span href=# class="material-icons-outlined info-button" id="topLeftFixed">info</span>
+        <span class="material-icons-outlined info-button" href="#" id="topLeftFixed">
+    info
+   </span>
     </div>
     <script>
         var map_zoom_control = $('.leaflet-control-zoom-in');
