before changes to group by

--- a/output.html
+++ b/output.html
@@ -247,7 +247,7 @@
                             <div>
                                 <!-- open sort div -->
                                 <h4>
-                                    sort
+                                    sort by:
                                 </h4>
                                 <ul>
                                     <div class="button-group" id="sorts">
@@ -272,12 +272,14 @@
                                         <button class="button" data-sort-by="dist_sea">
             dist_sea
            </button>
+                                        <!-- 
                                         <button class="button" data-sort-by="arrnona_year">
             arrnona_year
            </button>
                                         <button class="button" data-sort-by="radiation">
             radiation
            </button>
+           -->
                                     </div>
                                 </ul>
                             </div>
@@ -285,7 +287,7 @@
                             <div>
                                 <!-- open group by div -->
                                 <h4>
-                                    group by
+                                    group by:
                                 </h4>
                                 <ul>
                                     <div class="button-group layout-mode-button-group" id="group-sort">
