--- a/output.html
+++ b/output.html
@@ -247,7 +247,7 @@
                             <div>
                                 <!-- open sort div -->
                                 <h4>
-                                    sort by:
+                                    Sort by:
                                 </h4>
                                 <ul>
                                     <div class="button-group" id="sorts">
@@ -287,49 +287,123 @@
                             <div>
                                 <!-- open group by div -->
                                 <h4>
-                                    group by:
+                                    Group by:
                                 </h4>
-                                <ul>
-                                    <div class="button-group layout-mode-button-group" id="group-sort">
-                                        <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
+                                <div class="groupby_flex">
+                                    <ul>
+                                        <li>
+                                            <div class="button-group layout-mode-button-group" id="group-sort">
+                                                <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
+                                            original order
+                                            </button>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a>architectural style</a>
+                                            <div class="button-group layout-mode-button-group" id="group-sort">
+                                                <!--
+                                            <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
             original order
            </button>
-                                        <button class="button" data-group-by="primary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="primary">
-            primary
-           </button>
-                                        <button class="button" data-group-by="secondary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="secondary">
-            secondary
-           </button>
-                                        <button class="button" data-group-by="complex" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="complex">
+           -->
+                                                <button class="button" data-group-by="primary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="primary">
+                                                primary
+                                            </button>
+                                                <button class="button" data-group-by="secondary" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="secondary">
+                                                secondary
+                                            </button>
+                                                <!-- 
+                                            <button class="button" data-group-by="complex" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="complex">
             complex
            </button>
-                                        <button class="button" data-group-by="technology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="technology">
+                                            <button class="button" data-group-by="technology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="technology">
             technology
            </button>
-                                        <button class="button" data-group-by="status" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="status">
+                                            <button class="button" data-group-by="status" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="status">
             status
            </button>
-                                        <button class="button" data-group-by="finishing_materials" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="finishing_materials">
+                                            <button class="button" data-group-by="finishing_materials" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="finishing_materials">
             finishing_materials
            </button>
-                                        <button class="button" data-group-by="roof" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="roof">
+                                            <button class="button" data-group-by="roof" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="roof">
             roof
            </button>
-                                        <button class="button" data-group-by="typology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="typology">
+                                            <button class="button" data-group-by="typology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="typology">
             typology
            </button>
-                                        <button class="button" data-group-by="positioning" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="positioning">
+                                            <button class="button" data-group-by="positioning" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="positioning">
             positioning
            </button>
-                                        <button class="button" data-group-by="physical_condition" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="physical_condition">
+                                            <button class="button" data-group-by="physical_condition" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="physical_condition">
             physical_condition
            </button>
-                                        <button class="button" data-group-by="general_evaluation" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="general_evaluation">
+                                            <button class="button" data-group-by="general_evaluation" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="general_evaluation">
             general_evaluation
            </button>
-                                    </div>
-                                    <!-- close  class="button-group layout-mode-button-group" id="group-sort" -->
-                                </ul>
+           -->
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a>location</a>
+                                            <div class="button-group layout-mode-button-group" id="group-sort">
+                                                <!--
+                                            <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
+                                                original order
+                                            </button>
+                                            -->
+                                                <button class="button" data-group-by="complex" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="complex">
+                                             complex
+                                            </button>
+                                                <button class="button" data-group-by="positioning" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="positioning">
+                                                positioning
+                                            </button>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a>construction</a>
+                                            <div class="button-group layout-mode-button-group" id="group-sort">
+                                                <!--
+                                            <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
+                                                original order
+                                            </button>
+                                            -->
+                                                <button class="button" data-group-by="typology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="typology">
+                                                typology
+                                            </button>
+                                                <button class="button" data-group-by="technology" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="technology">
+                                                technology
+                                            </button>
+                                                <button class="button" data-group-by="roof" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="roof">
+                                                roof
+                                            </button>
+                                                <button class="button" data-group-by="finishing_materials" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="finishing_materials">
+                                                finishing materials
+                                            </button>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a>evaluation</a>
+                                            <div class="button-group layout-mode-button-group" id="group-sort">
+                                                <!--
+                                                <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
+                                                  original order
+                                                </button>\
+                                                -->
+                                                <button class="button" data-group-by="status" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="status">
+                                                    status
+                                                </button>
+                                                <button class="button" data-group-by="physical_condition" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="physical_condition">
+                                                    physical condition
+                                                </button>
+                                                <button class="button" data-group-by="general_evaluation" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="general_evaluation">
+                                                    estimated value
+                                                </button>
+                                            </div>
+                                        </li>
+                                        <!-- close  class="button-group layout-mode-button-group" id="group-sort" -->
+                                    </ul>
+                                </div>
+                                <!-- close groupby_flex -->
                             </div>
                             <!-- close group by div -->
                         </div>
